# recent-filter

./: .gitignore  README.md  io.github.unrud.RecentFilter.json  meson.build
data/: io.github.unrud.RecentFilter.desktop.in  io.github.unrud.RecentFilter.gschema.xml  io.github.unrud.RecentFilter.metainfo-releases.xml.in  io.github.unrud.RecentFilter.metainfo.xml.in  meson.build
po/: LINGUAS  POTFILES  es.po  et.po  hi.po  ia.po  it.po  meson.build  nb_NO.po  nl.po  recent-filter.pot  ta.po  tr.po
src/: about_dialog.ui.in  background_portal.py  filter.py  filter_test.py  gitignore.py  gitignore_test.py  main.py  meson.build  recent-filter.in  service.py  window.py  window.ui
src/gtk/: help-overlay.ui
src/util/: __init__.py  connection.py  meson.build
